[1.3] - Fix deprecation in newer Java versions